# blockchain-fraud-detection

./: .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.worker  Makefile  README.md  load_test.py  pyproject.toml
.github/workflows/: ci.yml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  logging.py
apps/api/app/schemas/: fraud.py
apps/contracts/: foundry.toml
apps/contracts/script/: Deploy.s.sol
apps/contracts/src/: FraudSignalRegistry.sol
apps/contracts/src/access/: Ownable.sol
apps/contracts/src/core/: FraudConsensusEngine.sol  MultiChainFraudRegistry.sol  ReporterRegistry.sol  WalletIdentityResolver.sol
apps/contracts/src/interfaces/: IFraudConsensusEngine.sol  IWalletIdentityResolver.sol
apps/contracts/src/libraries/: RiskMath.sol  Types.sol
apps/contracts/test/: FraudSignalRegistry.t.sol
apps/contracts/test/core/: FraudConsensusEngine.t.sol  MultiChainFraudRegistry.t.sol
apps/rust-indexer/: Cargo.toml
apps/rust-indexer/src/: main.rs
apps/rust-risk-engine/: Cargo.toml
apps/rust-risk-engine/src/: lib.rs  main.rs
apps/rust-risk-engine/tests/: integration.rs
apps/worker/worker/: main.py
infra/docker/: docker-compose.yml
infra/k8s/: api-deployment.yaml  worker-deployment.yaml
infra/terraform/: main.tf
ml/features/: cross_chain_identity.py
ml/graph_model/: train_graph_model.py
ml/timeseries/: train_timeseries_model.py
scripts/: bootstrap.sh
tests/integration/: test_health_endpoint.py
tests/unit/: test_fraud_detection.py  test_wallet_graph_engine.py
(+9 files in other folders)
