[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multichain-fraud-intelligence"
version = "0.1.0"
description = "Production-ready multi-chain AI fraud intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "networkx>=3.3",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.0",
  "web3>=6.20.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "prometheus-client>=0.20.0",
  "structlog>=24.2.0",
  "tenacity>=8.3.0",
  "redis>=5.0.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.8",
  "mypy>=1.10.0",
  "locust>=2.29.1"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/worker"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["apps/api", "apps/worker"]
include = ["app*", "worker*"]
