[package]
name = "rust-risk-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_risk_engine"
path = "src/lib.rs"

[[bin]]
name = "risk-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
